[gd_scene load_steps=8 format=3 uid="uid://ds6p17r30tnwi"]

[ext_resource type="Texture2D" uid="uid://btxlmr5k1ya83" path="res://art/turret.png" id="1_3oylf"]
[ext_resource type="Script" uid="uid://d3ah2hrtne3mg" path="res://turret.gd" id="1_tjdg3"]
[ext_resource type="Texture2D" uid="uid://bs176wmdfqvnj" path="res://art/barrel.png" id="3_c5apd"]
[ext_resource type="AudioStream" uid="uid://cwq8g6jo5a6ao" path="res://sound/shoot.wav" id="4_coqkk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjdg3"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_c5apd"]
radius = 192.0

[sub_resource type="CircleShape2D" id="CircleShape2D_coqkk"]

[node name="Turret" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_tjdg3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tjdg3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_3oylf")

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_c5apd")

[node name="Barrel" type="CharacterBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrel"]
shape = SubResource("CircleShape2D_coqkk")

[node name="Sprite2D" type="Sprite2D" parent="Barrel"]
rotation = -1.5707964
scale = Vector2(3, 3)
texture = ExtResource("3_c5apd")

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_coqkk")

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
